test/corpus/statements.txt
================================================================================
Basic subroutine declaration
================================================================================
sub make() {
    return;
}
--------------------------------------------------------------------------------

(source_file
  (subroutine_definition
    (identifier (bareword))
    (parameter_list)
    (block
      (return_statement)))
  )


================================================================================
Basic subroutine declaration
================================================================================
sub make($x, $y) {
    return;
}
--------------------------------------------------------------------------------

(source_file
  (subroutine_definition
    (identifier (bareword))
    (parameter_list
      (variable_name
        (identifier (bareword)))
      (variable_name
        (identifier (bareword))))
    (block
      (return_statement))))


================================================================================
Basic multimethod declaration
================================================================================
multi make() {
    return;
}
--------------------------------------------------------------------------------

(source_file
  (multimethod_definition
    (identifier (bareword))
    (parameter_list)
    (block
      (return_statement)))
  )

================================================================================
Exotic multimethod name declaration
================================================================================
multi அச்சமில்லை'snofear103934() {
    return;
}
--------------------------------------------------------------------------------

(source_file
  (multimethod_definition
    (identifier (bareword))
    (parameter_list)
    (block
      (return_statement)))
  )
